# Project

user_model_assignment/: pyproject.toml
user_model_assignment/user_model_assignment/: db.sqlite3
user_model_assignment/user_model_assignment/BlogPost/: admin.py  models.py  urls.py  views.py
user_model_assignment/user_model_assignment/BlogPost/migrations/: 0001_initial.py  0002_rename_blogpost_blog.py
user_model_assignment/user_model_assignment/model_app/: admin.py  managers.py  models.py  refresh.py  serializers.py  urls.py  views.py  viewss.py
user_model_assignment/user_model_assignment/model_app/migrations/: 0001_initial.py  0002_alter_customuser_phone.py  0003_alter_customuser_phone.py  0004_refreshtoken.py
user_model_assignment/user_model_assignment/user_model_assignment/: settings.py  urls.py
vue-project/: README.md  package-lock.json  package.json  tailwind.config.js
vue-project/src/: App.vue  main.js  store.js
vue-project/src/components/: First.vue  Form.vue  Test.vue
vue-project/src/components/blogpost/: AllBlog.vue  Landing.vue
vue-project/src/components/user/: CreateForm.vue  EditForm.vue  HomeView.vue  Login.vue  UserList.vue
vue-project/src/router/: index.js
vue-project/src/stores/: index.js
vue-project/src/views/: EditForm.vue  HomeView.vue  Login.vue  UserForm.vue  UserView.vue  pp.vue  qq.vue
vue-project/src/views/blogpost/: AddBlog.vue  EditBlog.vue  MyBlog.vue
